small fixes (e. g. against zooming out of bounds)

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -12,7 +12,7 @@ header {
   background: #173a64 url(../../assets/background.png) center center;
   color: #fff;
   padding: 5px;
-  height: 55px;
+  height: 60px;
 }
 
 #logo {
